# plasma-setup

./: .contextProperties.ini  .editorconfig  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  config-plasma-setup.h.cmake  flake.nix  org.kde.plasmasetup.metainfo.xml
docs/: CUSTOM_MODULES.md
files/: CMakeLists.txt  kde-initial-system-setup.desktop.in  kglobalaccelrc  kglobalshortcutsrc.in  plasma-setup-polkit.rules  plasma-setup-sysuser.conf  plasma-setup-tmpfiles.conf.in  plasma-setup.desktop.in  plasma-setup.service.in  plasmasetuprc
modules/: CMakeLists.txt
modules/account/: CMakeLists.txt  metadata.json  metadata.json.license
modules/account/contents/ui/: Debouncer.qml  main.qml
modules/cellular/: metadata.json  metadata.json.license
modules/cellular/contents/ui/: main.qml
modules/finished/: CMakeLists.txt  metadata.json
modules/finished/contents/ui/: main.qml
modules/hostname/: CMakeLists.txt  metadata.json
modules/hostname/contents/ui/: main.qml
modules/hostnameutil/: CMakeLists.txt  hostnameutil.cpp  hostnameutil.h  org.freedesktop.hostname1.xml
modules/keyboard/: CMakeLists.txt  metadata.json
modules/keyboard/contents/ui/: main.qml
modules/language/: CMakeLists.txt  languageutil.cpp  metadata.json  metadata.json.license
modules/language/contents/ui/: main.qml
modules/languageutil/: CMakeLists.txt  languagesortfilterproxymodel.cpp  languagesortfilterproxymodel.h  languageutil.cpp  languageutil.h
modules/prepare/: CMakeLists.txt  metadata.json  prepareutil.cpp
modules/prepare/contents/ui/: main.qml
modules/prepare/package/: metadata.json
modules/prepareutil/: CMakeLists.txt  prepareutil.cpp
modules/time/: CMakeLists.txt  metadata.json  metadata.json.license  timeutil.cpp  timeutil.h  timezonemodel.cpp
modules/time/contents/ui/: main.qml
modules/timeutil/: CMakeLists.txt  org.freedesktop.timedate1.xml  timeutil.cpp
modules/wifi/: CMakeLists.txt  metadata.json  metadata.json.license
modules/wifi/contents/ui/: ConnectDialog.qml  ConnectionItemDelegate.qml  main.qml
po/ar/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/az/: org.kde.plasmasetup.po
po/ca/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/ca@valencia/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/cs/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/de/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/en_GB/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/es/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/eu/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/fi/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/fr/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/ga/: org.kde.plasmasetup.po
po/gl/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/he/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/hu/: org.kde.plasmasetup.po
po/ia/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/it/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/ja/: org.kde.plasmasetup.po
po/ka/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/ko/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/lt/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/lv/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/nb/: org.kde.plasmasetup.po
po/nl/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/nn/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/pl/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/pt_BR/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/ro/: org.kde.plasmasetup.po
po/ru/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/sk/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/sl/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/sv/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/tr/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/ug/: org.kde.plasmasetup.po
po/uk/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/zh_CN/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
po/zh_TW/: org.kde.initialsystemsetup.po  org.kde.plasmasetup.po
scripts/: rebuild-dev.sh
src/: CMakeLists.txt  accountcontroller.cpp  accountcontroller.h  displayutil.cpp  initialstartutil.cpp  initialstartutil.h  keyboardutil.cpp  keyboardutil.h  main.cpp  pagesmodel.cpp  user.cpp  usernamevalidator.h
src/auth/: CMakeLists.txt  authhelper.cpp  authhelper.h  org.kde.initialsystemsetup.actions  org.kde.plasmasetup.actions
src/bootutil/: CMakeLists.txt  bootutil.cpp  bootutil.h  main.cpp
src/components/: CMakeLists.txt  setupmodule.cpp
src/components/qml/: Debouncer.qml
src/packagestructure/: CMakeLists.txt  plasmasetup-packagestructure.json  plasmasetup-packagestructure.json.license  plasmasetuppackage.cpp  plasmasetuppackage.h
src/qml/: LandingComponent.qml  Main.qml  SessionMenu.qml  Wizard.qml
